<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/adresEmail"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:layout_marginTop="132dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/adres_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/haslo"
        android:layout_width="280dp"
        android:layout_height="46dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/has_o"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adresEmail"
        app:layout_constraintVertical_bias="0.047" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="160dp"
        android:layout_height="46dp"
        android:text="@string/zatwierd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/haslo"
        app:layout_constraintVertical_bias="0.109" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="326dp"
        android:layout_height="32dp"
        android:text="@string/ju_zarejestrowany_kliknij_tutaj_aby_si_zalogowa"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/textViewReg"
        android:layout_width="190dp"
        android:layout_height="44dp"
        android:text="@string/rejestracja"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/adresEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>